2006-05-30  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Remove some unused code.
	* gui/gdmsetup.c: Fix so when you click on the include_all
	  button, the Automatic/Timed login values update properly.
	  Fixes bug #343203.

2006-05-23  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.7: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.

2006-05-22  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_events.c:  Fix so that the entry field
	  always has focus after a button press, which wasn't working
	  if the buttons were GTK+ style.

2006-05-19  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/gdmconfig.[ch], daemon/slave.c,
	  daemon/verify-pam.c: Fix per-display configuration so it
	  also works for greeter/SystemMenu and greeter/ChooserButton
	  keys.  Add new gdmconfig.c interfaces for getting keys in
	  a per-display fashion so they are easier to use.

2006-05-18  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am: Do not cause make install to fail if chown
	  fails.

2006-05-17  Brian Cameron  <brian.cameron@sun.com>

	* daemon/auth.c: Check if authdir is the fallback dir.  If not,
	  and GDM cannot access the user's $HOME directory, then try and
	  fallback directory.  Fixes bug #342116.  Patch provided
	  by Arjan Timmerman <arjan@soulfly.nl>.

2006-05-15  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Fix configure so it builds the path to use for
	  gdm-ssh-session desktop file properly if --libexecdir isn't
	  passed to configure.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am: No longer clean config/ssh.desktop.in file.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* utils/Makefile.am: Add gdm-ssh-session to EXTRA_DIST.

2006-05-12  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsession.c: Fix bug that was causing the
	  ShowGnomeFailsafeSession and ShowGnomeXtermSession configuration
	  values not to work right.
