@@ -640,6 +640,8 @@ set_screen_to_pos (int x, int y)
 static void
 gdm_run_gdmconfig (GtkWidget *w, gpointer data)
 {
+	gtk_widget_set_sensitive (browser, FALSE);
+
 	/* we should be now fine for focusing new windows */
 	gdm_wm_focus_new_windows (TRUE);
 
