@@ -1,3 +1,11 @@
+2006-05-31  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/gdmlogin.c, gui/greeter/greeter.c,
+	  gui/greeter/greeter_item_ulist.[ch], gui/greeter/greeter_system.c:
+	  Correct serious issue where user can enter the configure
+	  screen with their user password instead of the root password.
+	  Fixes bug #343476.
+
 2006-05-30  Brian Cameron  <brian.cameron@sun.com>
 
 	* daemon/gdm.c: Remove some unused code.
